##Copyright (C) 2020, Advanced Micro Devices, Inc.##
target_sources("${PROJECT_NAME}" 
     PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_CAQ_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_CAQ_UT_inc_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_CAQ2_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_diag_matrix_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_pivots_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q_UT_inc_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q2_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_Q2_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_QUD_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_QUD_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_QUD_UT_inc_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_QUD_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_form_U_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_form_V_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_extract_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_extract_real_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_form_U_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_form_V_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_realify_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_realify_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_recover_tau_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bidiag_UT_scale_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bsvd_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Bsvd_ext_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_CAQR_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_CAQR_UT_inc_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_CAQR2_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Chol_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Chol_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Chol_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Eig_gest_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Eig_gest_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_FS_incpiv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hess_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hess_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hess_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hess_UT_recover_tau_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hevd_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hevd_compute_scaling_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hevdd_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hevdr_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_UT_form_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_UT_recover_tau_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LQ_UT_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_incpiv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_incpiv_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_nopiv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_nopiv_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_nopiv_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_piv_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Lyap_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Lyap_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_form_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_copy_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_form_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_inc_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_piv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_piv_colnorm_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_piv_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_recover_tau_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR_UT_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR2_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_QR2_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_SPDinv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_SPDinv_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svd_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svd_compute_scaling_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svd_ext_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svdd_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sylv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sylv_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_apply_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_form_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_extract_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_extract_real_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_form_Q_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_realify_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_realify_subdiagonal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_recover_tau_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_scale_diagonals_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Tridiag_UT_shift_U_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Trinv_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Ttmm_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Ttmm_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_inc_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_inc_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_inc_update_rhs_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_internal_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_solve_check.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_UDdate_UT_update_rhs_check.c
	)
	
add_subdirectory(util)