##Copyright (C) 2020, Advanced Micro Devices, Inc.##
target_sources("${PROJECT_NAME}" 
     PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Absolute_square.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Absolute_value.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Add_to_diag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Clock.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Conjugate.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Conjugate_r.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_cluster_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_geometric_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_inverse_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_linear_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_logarithmic_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Fill_with_random_dist.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hermitianize.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Inv_scal_elemwise.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Invert.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Max_abs_value.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Max_abs_value_herm.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Max_elemwise_diff.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Mult_add.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Negate.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Norm_frob.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Norm_inf.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Norm1.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Pow.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_herm_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_random_number.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_spd_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_symm_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_tri_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Random_unitary_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Scal_elemwise.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Scale_diag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Set.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Set_diag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Set_diagonal.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Set_offdiag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Set_to_identity.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Setr.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Shift_diag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sort.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sqrt.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Symmetrize.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Triangularize.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_env.c
	)
	
add_subdirectory(transpose)
