##Copyright (C) 2020, Advanced Micro Devices, Inc.##
target_sources("${PROJECT_NAME}" 
     PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Apply_diag_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Form_perm_matrix.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hev_2x2.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Hevv_2x2.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Househ2_UT.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Househ2s_UT.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Househ3UD_UT.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_LU_find_zero_on_diagonal.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Mach_params.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Norm1_tridiag.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Pythag2.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Pythag3.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Shift_pivots_to.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sort_bsvd_ext.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sort_evd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sort_svd.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Sv_2x2.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Svv_2x2.c
${CMAKE_CURRENT_SOURCE_DIR}/FLA_Wilkshift_tridiag.c
	)
add_subdirectory(mch)