##Copyright (C) 2020, Advanced Micro Devices, Inc.## 
target_sources("${PROJECT_NAME}" 
     PRIVATE
${CMAKE_CURRENT_SOURCE_DIR}/abs.c
${CMAKE_CURRENT_SOURCE_DIR}/acos.c
${CMAKE_CURRENT_SOURCE_DIR}/asin.c
${CMAKE_CURRENT_SOURCE_DIR}/atan.c
${CMAKE_CURRENT_SOURCE_DIR}/atn2.c
${CMAKE_CURRENT_SOURCE_DIR}/cnjg.c
${CMAKE_CURRENT_SOURCE_DIR}/cos.c
${CMAKE_CURRENT_SOURCE_DIR}/cosh.c
${CMAKE_CURRENT_SOURCE_DIR}/dim.c
${CMAKE_CURRENT_SOURCE_DIR}/div.c
${CMAKE_CURRENT_SOURCE_DIR}/exit_.c
${CMAKE_CURRENT_SOURCE_DIR}/exp.c
${CMAKE_CURRENT_SOURCE_DIR}/h_dnnt.c
${CMAKE_CURRENT_SOURCE_DIR}/hl_cmp.c
${CMAKE_CURRENT_SOURCE_DIR}/i_dnnt.c
${CMAKE_CURRENT_SOURCE_DIR}/i_len.c
${CMAKE_CURRENT_SOURCE_DIR}/imag.c
${CMAKE_CURRENT_SOURCE_DIR}/int.c
${CMAKE_CURRENT_SOURCE_DIR}/l_cmp.c
${CMAKE_CURRENT_SOURCE_DIR}/lg10.c
${CMAKE_CURRENT_SOURCE_DIR}/log.c
${CMAKE_CURRENT_SOURCE_DIR}/mod.c
${CMAKE_CURRENT_SOURCE_DIR}/nint.c
${CMAKE_CURRENT_SOURCE_DIR}/pow.c
${CMAKE_CURRENT_SOURCE_DIR}/prod.c
${CMAKE_CURRENT_SOURCE_DIR}/s_cmp.c
${CMAKE_CURRENT_SOURCE_DIR}/s_copy.c
${CMAKE_CURRENT_SOURCE_DIR}/sign.c
${CMAKE_CURRENT_SOURCE_DIR}/sin.c
${CMAKE_CURRENT_SOURCE_DIR}/sinh.c
${CMAKE_CURRENT_SOURCE_DIR}/sqrt.c
${CMAKE_CURRENT_SOURCE_DIR}/tan.c
${CMAKE_CURRENT_SOURCE_DIR}/tanh.c
${CMAKE_CURRENT_SOURCE_DIR}/s_cat.c
${CMAKE_CURRENT_SOURCE_DIR}/f77_aloc.c

	)
add_subdirectory(io)